--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,6 +10,7 @@ steps:
   inputs:
     script: |     
       set -eo pipefail
+      ${INPUT_REPO_TOKEN}=$(PTOKEN)
       REPO="kcsplcompusoft/ABCAPI"
       DATE='1 hour ago'
       DRY_RUN=true
@@ -20,7 +21,8 @@ steps:
       EXCLUDE_TAG_REGEX='^v.*'
       EXCLUDE_OPEN_PR_BRANCHES=true
       # used for GitHub CLI authentication
-      export GITHUB_TOKEN= $(PTOKEN)
+      export GITHUB_TOKEN= ${INPUT_REPO_TOKEN}
+      echo "${GITHUB_TOKEN}"
       echo "was_dry_run=${DRY_RUN}" 
       deleted_branches=()
       default_branch_protected() {
