Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,8 +22,7 @@ steps:
       EXCLUDE_OPEN_PR_BRANCHES=true
       # used for GitHub CLI authentication
       export GITHUB_TOKEN= ${INPUT_REPO_TOKEN}
-      echo "${INPUT_REPO_TOKEN}"
-      echo "was_dry_run=${DRY_RUN}" 
+      echo "was_dry_run=${DRY_RUN}" >> "${GITHUB_OUTPUT}" 
       deleted_branches=()
       default_branch_protected() {
           local br=${1}
@@ -110,7 +109,7 @@ steps:
                   delete_branch_or_tag "${br}" "heads" "${sha}"
               fi
           done
-          echo "deleted_branches=${deleted_branches[*]}"
+          echo "deleted_branches=${deleted_branches[*]}" >> "${GITHUB_OUTPUT}"
           if [[ "${DELETE_TAGS}" == true ]]; then
               local tag_counter=1
               for br in $(git ls-remote -q --tags --refs | sed "s@^.*tags/@@" | sort -rn); do
