--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ steps:
     script: |     
       set -eo pipefail
       INPUT_REPO_TOKEN=$(PTOKEN)
-      REPO="${GITHUB_REPOSITORY}"
+      #REPO="${GITHUB_REPOSITORY}"
       DATE='1 hour ago'
       DRY_RUN=true
       DELETE_TAGS=true
@@ -22,7 +22,6 @@ steps:
       EXCLUDE_OPEN_PR_BRANCHES=true
       # used for GitHub CLI authentication
       export GITHUB_TOKEN= ${INPUT_REPO_TOKEN}
-      echo "repo=${REPO}"
       echo "was_dry_run=${DRY_RUN}" >> '$GITHUB_OUTPUT' 
       deleted_branches=()
       default_branch_protected() {
@@ -39,6 +38,7 @@ steps:
       branch_protected() {
           local br=${1}
           protected=$(gh api "repos/${REPO}/branches/${br}" --jq '.protected')
+          echo "repo=${REPO}"
           # If we got null then something else happened (like no access error etc) so
           # we can't determine the status for the branch
           case ${protected} in
